--- a/StopTheClip/StopTheClip.csproj
+++ b/StopTheClip/StopTheClip.csproj
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Dalamud.NET.SDK/11.2.0">
   <PropertyGroup>
     <Authors></Authors>
     <Company></Company>
-    <Version>0.0.1.0</Version>
+    <Version>0.0.1.1</Version>
     <Description>StopTheClip</Description>
     <Copyright></Copyright>
 	<PackageProjectUrl></PackageProjectUrl>
@@ -30,7 +30,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DalamudPackager" Version="2.1.13" />
     <Reference Include="FFXIVClientStructs">
       <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
       <Private>false</Private>
